<resources>
    <string name="app_name">Hatırlatıcı</string>
    <string name="add_new">Yeni Ekle</string>
    <string name="settings">Ayarlar</string>
    <string name="today">Bugün</string>
    <string name="week">Haftalık</string>
    <string name="month">Aylık</string>
    <string name="all">Tümü</string>
    <string name="date">Tarih</string>
    <string name="share">Paylaş</string>

    <string name="rTitle">Başlık</string>
    <string name="rDate">Tarih</string>

    <string name="title">Başlık</string>
    <string name="details">Detay</string>
    <string name="category">Kategori</string>
    <string name="done">Bitti</string>
    <string name="save">Kaydet</string>
    <string name="back">Geri</string>
    <string name="date_time">Tarih</string>
    <string name="birthday">Doğumgünü</string>
    <string name="activity">Aktivite</string>
    <string name="notice">Bildirim</string>
    <string name="meeting">Toplantı</string>

    <string name="Notification_Ringaton">Bildirim Sesi Seç</string>
    <string name="timer">Zamanlayıcı</string>
    <string name="title_activity_settings">Settings</string>

    <string name="all_list">Tüm Liste</string>

    <string name="snooze_options">Erteleme Süresi (dk)</string>
    <string name="remind_time">Hatırlatma Zamanı (dk)</string>
    <string name="screen_mode">Ekran Modu</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
